[tool.poetry]
name = "knowledge-base"
version = "0.1.0"
description = "My knowledge Base"
authors = ["Igor Souza <igormcsouza@gmail.com>"]
readme = "README.md"
packages = [{include = "knowledge_base"}]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
